--- a/index.html
+++ b/index.html
@@ -2872,7 +2872,7 @@
     <p>
       <strong><b>В созданиие учавствовали: </b></strong><br>
       <br>
-      1. Отто Крауц / Manrain <br>
+      1. Отто Крауц / Mandrain <br>
       <br>
       2. Люцифер Минтон - Моральная Поддержка<br>
       <br>
