--- a/index.html
+++ b/index.html
@@ -189,6 +189,8 @@
       <br>
       0.5 При необходимости главная администрация вправе изменить действие тех или иных правил на определенный промежуток времени для проведения мероприятий и других значимых ситуаций.<br>
       <br>
+      0.6 Если игрок нарушает правила сервера на регулярной основе и делает это осознанно, то администратор имеет право выдать ему наказание в размере x2/3 от изначального срока. <br>
+      <br>
       1.0 <span style="color: rgb(209, 72, 65)"><b>NonRP </b></span>- Несоответствие отыгрышу роли. Важно действовать так, как поступил бы ваш персонаж в контексте игрового мира.<br>
       <span style="color: rgb(65, 168, 95)">Примечание</span>: Образцам, сотрудникам КМ (<span style="color: rgb(65, 168, 95)">Исключение</span>: Дезертир), ЭВС, ДЗ запрещено находиться в вентиляции и канализации без причины (<span style="color: rgb(65, 168, 95)">Пример</span>: Нахождение там цели / единственный путь к спасению / подозрения на нарушителей).<br>
       <span style="color: rgb(65, 168, 95)">Пометка</span>: Запрещено делать заказ на убийство руководства своей организации, заказы на остальных сотрудников разрешается делать только при появлении весомой причины.<br>
@@ -2175,7 +2177,7 @@
         <li data-xf-list-type="ol">Протокол <span style="color: rgb(250, 197, 28)">Ликвидация [Цель]</span> - Ликвидация заданной цели.</li>
         <li data-xf-list-type="ol">Протокол <span style="color: rgb(250, 197, 28)">НП </span>- Оказание помощи научно-исследовательской деятельности ученых.</li>
         <li data-xf-list-type="ol"><span style="color: rgb(84, 172, 210)">Автоматический </span>протокол <span style="color: rgb(250, 197, 28)">МОГ (СК, ЖК)</span> - Выполнение функций МОГ: патруль ТЗС и АЗ, ликвидация сбежавших испытуемых и восстановление условий содержания образцов, обеспечение безопасности в комплексе в установленных зонах.</li>
-        <li data-xf-list-type="ol"><span style="color: rgb(84, 172, 210)">Автоматический </span>протокол <span style="color: rgb(250, 197, 28)">Ликвидатор (КК)</span> - Ликвидация всех сбежавших испытуемых и агрессивных образцов (<span style="color: rgb(65, 168, 95)">Исключение</span>: Ликвидация <span style="color: rgb(65, 168, 95)">безопасных </span>и сотрудничающих образцов), обеспечение безопасности в комплексе и отражение угроз извне.</li>
+        <li data-xf-list-type="ol"><span style="color: rgb(84, 172, 210)">Автоматический </span>протокол <span style="color: rgb(250, 197, 28)">Ликвидатор (КК)</span> - незамедлительная ликвидация всех сбежавших испытуемых и агрессивных образцов (<span style="color: rgb(65, 168, 95)">Исключение</span>: Ликвидация <span style="color: rgb(65, 168, 95)">безопасных </span>и сотрудничающих образцов) при минимальной угрозе для БЕК, обеспечение безопасности в комплексе и отражение угроз извне.</li>
         <li data-xf-list-type="ol"><span style="color: rgb(84, 172, 210)">Автоматический </span>протокол <span style="color: rgb(250, 197, 28)">Эвакуация (Только при эвакуации)</span> - Содействие и эвакуация всего персонала комплекса на заданную точку.</li>
         </ol><span style="color: rgb(65, 168, 95)">Пометки</span>:<br>
         <ul>
@@ -2556,7 +2558,7 @@
         <li data-xf-list-type="ol">Особый протокол <span style="color: rgb(250, 197, 28)">Автоном </span>- Автоматическое принятие решений, действие по ситуации и на своё усмотрение.</li>
         </ol><span style="color: rgb(65, 168, 95)">Пометки</span>:<br>
         <ul>
-        <li data-xf-list-type="ul">Протокол "<span style="color: rgb(250, 197, 28)">Оборона [Собственность ДЗ]</span>" принимается автоматически (Если не был выдан иной протокол). При наличии Патрульных ДЗ, ИИ Кобра имеет право сопровождать их и ликвидировать любого, кто посягнет на них. Если Глава, выдавший иной протокол, погибает - ИИ Кобра автоматически принимает протокол "<span style="color: rgb(250, 197, 28)">Оборона [Собственность ДЗ]</span>".</li>
+        <li data-xf-list-type="ul">Протокол "<span style="color: rgb(250, 197, 28)">Оборона [Собственность ДЗ]</span>" принимается автоматически (Если не был выдан иной протокол). При наличии Патрульных ДЗ, ИИ Кобра имеет право сопровождать их и ликвидировать любого, кто посягнет на них. Если на острове отсутствуют главы ДЗ - ИИ Кобра автоматически принимает протокол "<span style="color: rgb(250, 197, 28)">Оборона [Собственность ДЗ]</span>".</li>
         <li data-xf-list-type="ul">Протокол могут выдавать всё руководство ДЗ и ученые (<span style="color: rgb(250, 197, 28)">Ученые не могу выдать протокол "Автоном", а сами протоколы являются второстепенными</span>).</li>
         <li data-xf-list-type="ul">При протоколе "<span style="color: rgb(250, 197, 28)">Разведка [Цель]</span>" ИИ Кобра может заходить на любые территории без ограничений, но нападать может только в случае самообороны с последующим немедленным отступлением с территории врага и докладом руководству. При слежке может взаимодействовать с необходимыми целями без физического контакта, но обязан сохранять скрытность.</li>
         </ul>
