Надпись о актуальности правил

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 </head>
 <body>
 <div class="container">
-  <h1>Правила сервера Unisono</h1>
+  <h1>Правила сервера Unisono <br> (Актуально на момент 16.09.2025) </h1>
   <nav>
     <a href="#terms">1. Основные игровые термины и наказания</a>
     <a href="#chat">2. Правила игрового и технического чатов</a>
