обновлены правила на момент 23.09.2025

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 <body>
 <button id="themeToggle">🌙 Тёмная тема</button>
 <div class="container">
-  <h1>Правила сервера Unisono <br> (Актуально на момент 16.09.2025) </h1>
+  <h1>Правила сервера Unisono <br> (Актуально на момент 23.09.2025) </h1>
   <nav>
     <a href="#terms">1. Основные игровые термины и наказания</a>
     <a href="#chat">2. Правила игрового и технического чатов</a>
@@ -263,7 +263,7 @@
       <br>
       1.0 <span style="color: rgb(209, 72, 65)"><b>NonRP </b></span>- Несоответствие отыгрышу роли. Важно действовать так, как поступил бы ваш персонаж в контексте игрового мира.<br>
       <span style="color: rgb(65, 168, 95)">Примечание</span>: Образцам, сотрудникам КМ (<span style="color: rgb(65, 168, 95)">Исключение</span>: Дезертир), ЭВС, ДЗ запрещено находиться в вентиляции и канализации без причины (<span style="color: rgb(65, 168, 95)">Пример</span>: Нахождение там цели / единственный путь к спасению / подозрения на нарушителей).<br>
-      <span style="color: rgb(65, 168, 95)">Пометка</span>: Запрещено делать заказ на убийство руководства своей организации, заказы на остальных сотрудников разрешается делать только при появлении весомой причины.<br>
+      <span style="color: rgb(65, 168, 95)">Пометка</span>: Запрещено делать заказ на убийство руководства своей организации без прямой угрозы жизни с их стороны, заказы на остальных сотрудников разрешается делать только при появлении весомой причины.<br>
       <span style="color: rgb(65, 168, 95)">Пометка</span>: Запрещено лечить образцов аптечкой (<span style="color: rgb(65, 168, 95)">Исключение</span>: О.Господин Рыба и О.Маска).<br>
       <span style="color: rgb(65, 168, 95)">Пометка</span>: Запрещено атаковать игроков по выпирающим из стен моделькам.<br>
       <span style="color: rgb(65, 168, 95)">Пометка</span>: Запрещены 18+ отыгровки и постройки.<br>
@@ -475,6 +475,16 @@
         <br>
         <span style="color: rgb(65, 168, 95)">Примечание</span>: О глобальных событиях определенной организации знают лишь ее представители, а иные личности не могут об этом узнать (<span style="color: rgb(65, 168, 95)">Исключение</span>: Смена дипломатических отношений / заключение контрактов / рейд).<br>
         <span style="color: rgb(65, 168, 95)">Пометка</span>: Мелкие события, объявления о своей смерти и общение не могут быть отыграны подобным образом.<br>
+        <span style="color: rgb(65, 168, 95)">Примечание</span>: Все подразделения КМ и сторонние организации обязаны отписывать объявления о подавлении образцов по следующему<br>
+        формуляру: <br>
+        /ad [RP] "Подразделение КМ/Название организации" подавили/подавили совместно с "Наименование союзника" Образец "Наименование"<br>
+        Образцам разрешается отписывать о подавлении других образцов, опираясь на свою РП составляющую.<br>
+        <span style="color: rgb(65, 168, 95)">Пример</span>:<br>
+        /ad [RP] Образец Мясник сожрал Образца Авель.
+        <br>
+        /ad [RP] Образец Огненный Человек сжёг Образца Кошмар.
+        <br>
+        <span style="color: rgb(65, 168, 95)">Пометка</span>: Мелкие события, объявления о своей смерти о общения не могут быть отыграны подобныйм образом. <br>
         <br>
         <span style="color: rgb(250, 197, 28)"><b>3. Запросы образцов</b></span><br>
         <span style="color: rgb(65, 168, 95)">Формуляр</span>:<br>
@@ -903,7 +913,7 @@
         Соблазненные жертвы являются безвольными телами, которые не способны на принятие самостоятельных решений. Их главная цель - порадовать свою госпожу, защищая и выполняя её приказы.<br>
         <br>
         Соблазненные жертвы <span style="color: rgb(250, 197, 28)">обязаны </span>перемещаться рядом с госпожой и напасть на обидчика, если тот атакует её.<br>
-        О.Суккуб <span style="color: rgb(65, 168, 95)">может </span>выдавать любые приказы своим жертвам, если эти приказы не навредят ей самой.<br>
+        О.Суккуб <span style="color: rgb(65, 168, 95)">может </span>выдавать любые приказы своим жертвам, если эти приказы не навредят ей самой (<span style="color: rgb(65, 168, 95)">Исключение</span>: приказы на убийство без весомой причины).<br>
         <br>
         <span style="color: rgb(250, 197, 28)">Цели/Задачи </span>- совратить как можно больше жертв.
         <br>
@@ -1516,7 +1526,7 @@
         Во время движения в свою К.С. может отреагировать на нападение, но обязан появится в своей камере в течение 5ти минут после активации костолома.<br>
         <br>
         О.Старик <span style="color: rgb(65, 168, 95)">может </span>атаковать всех, кто оказался в его измерении (<span style="color: rgb(65, 168, 95)">Исключение</span>: Образец, пойманный Стариком по случайности).<br>
-        О.Старик <span style="color: rgb(209, 72, 65)">не может</span> нападать на образцов и XV88 вне измерения (<span style="color: rgb(65, 168, 95)">Исключение</span>: Образцы и XV88, которые нанесли урон по Старику / Маска).<br>
+        О.Старик <span style="color: rgb(209, 72, 65)">не может</span> нападать на образцов, роботов и XV88 вне измерения (<span style="color: rgb(65, 168, 95)">Исключение</span>: Образцы, роботы и XV88, которые нанесли урон по Старику / Члены ОПН / Маска).<br>
         О.Старик <span style="color: rgb(209, 72, 65)">не может</span> ломать что-либо, кроме двери своей К.С.<br>
         О.Старик <span style="color: rgb(209, 72, 65)">не может</span> пользоваться вертикальными лестницами.<br>
         О.Старик <span style="color: rgb(209, 72, 65)">не может </span>покидать пределы комплекса.<br>
@@ -2458,6 +2468,7 @@
         СОП <span style="color: rgb(209, 72, 65)">не могут</span> покидать окрестности заброшенного города без приказа предводителя/рейнджера или веской причины.<br>
         СОП <span style="color: rgb(209, 72, 65)">не могут </span>выпускать образцов из камер содержания, за исключением готовых сотрудничать.<br>
         СОП <span style="color: rgb(209, 72, 65)">не могут</span> предавать своих товарищей или мириться с комплексом.<br>
+        СОП <span style="color: rgb(209, 72, 65)"> не могут</span> атаковать испытуемых, кроме случаев: испытуемые угрожают или представляют угрозу самим членам СОП; находятся на базе СОП долгое время и, при этом отказываются вступать в СОП.<br>
       </ul>
       <ul>
         <strong>Подробнее о рейдах СОП</strong><br>
@@ -2668,11 +2679,11 @@
       <ul>
         <strong>РП моменты Испытуемого</strong><br>
         <br>
-        Сбежавший из комплекса испытуемый <span style="color: rgb(65, 168, 95)">может </span>вступить в СОП или вернуться в комплекс, имея право на атаку всего персонала, но <span style="color: rgb(209, 72, 65)">без права</span> посещать блок испытуемых (<span style="color: rgb(250, 197, 28)">Если испытуемый взял снаряжение у Бориса Бритвы, он также не имеет право возвращаться в блок испытуемых без активного бунта</span>).<br>
+        Сбежавший из комплекса испытуемый имеет 3 сценария своего будущего: он <span style="color: rgb(65, 168, 95)">может </span>вступить в СОП; путешествовать по острову и атаковать всех, кого посчитает нужным (Фонд, ДЗ, СОП, и Горные Рабочие), но, если люди, которые не являются членами Фонда, оказывают ему поддержку, он не имеет права их атаковать; вернуться в комплекс, имея право на атаку всего персонала, но <span style="color: rgb(209, 72, 65)">без права</span> посещать блок испытуемых (<span style="color: rgb(250, 197, 28)">Если испытуемый взял снаряжение у Бориса Бритвы, он также не имеет право возвращаться в блок испытуемых без активного бунта</span>).<br>
         <br>
         Если в блоке сотрудник комплекса находится в отдельной комнате один, испытуемый <span style="color: rgb(65, 168, 95)">может </span>заставить его выдать карту доступа или другой необходимый предмет путём запугивания, либо убить того в укромном месте (<span style="color: rgb(250, 197, 28)">Убивать при ограблении в главном холле и его коридорах запрещается, в том числе и в коридорах с камерами испытуемых. Убийство на публике, если это не ваши товарищи, также запрещается</span>).<br>
         <br>
-        Находясь вне блока, испытуемый <span style="color: rgb(65, 168, 95)">может </span>свободно </span>атаковать сотрудников комплекса.<br>
+        Находясь вне блока, испытуемый <span style="color: rgb(65, 168, 95)">может </span>свободно </span>атаковать всех, кого посчитает нужным (<span style="color: rgb(65, 168, 95)">Исключение</span>: люди, которые оказали прямую поддержку испытуемым).<br>
         <br>
         Находясь в блоке, испытуемый <span style="color: rgb(209, 72, 65)">не может</span> без особой причины атаковать персонал комплекса (<span style="color: rgb(65, 168, 95)">Примеры причин</span>: Самооборона или защита друга / нежелание идти на эксперименты / бунт / присутствие в блоке испытуемых TAGILLA или бойцов СОП / активация ЯБ).<br>
         <br>
@@ -2951,6 +2962,7 @@
       <br>
       3. Robert Targaryan - Скинул скриншоты йоу/Тестер
       <br>
+      4. Чучмек Артем - этот курва бобер по кд нажимал ctrl + A и delete.
     </p>
   </div>
 
