Обновлены правила на момент 24.09.2025

--- a/index.html
+++ b/index.html
@@ -2267,7 +2267,7 @@
         <li data-xf-list-type="ul">Автоматические протоколы принимаются в соответствии с указанным рядом кодом комплекса, но не могут перекрывать выданный вручную.</li>
         <li data-xf-list-type="ul">При преследовании цели или приказе руководства БЕК может покинуть закрепленную за ним зону, установленную текущим кодом и протоколом. По завершению работы обязан вернуться в установленную протоколом зону.</li>
         <li data-xf-list-type="ul">Протокол могут выдавать все главы отделов и руководство комплекса, а также глава ЭВС.</li>
-        <li data-xf-list-type="ul">Протокол можно активировать устным приказом, либо с помощью объявления "<span style="color: rgb(250, 197, 28)">/ad [RP] Робопатрулю *Наименование* (можно сразу всем) был выдан протокол *Название*</span>".</li>
+        <li data-xf-list-type="ul">Протокол можно активировать письменным приказом рядом с БЕК "<span style="color: rgb(250, 197, 28)">/do Робопатрулю "Наименование" выдан протокол "Название"</span>", либо с помощью объявления "<span style="color: rgb(250, 197, 28)">/ad [RP] Робопатрулю *Наименование* (можно сразу всем) был выдан протокол *Название*</span>".</li>
         </ul>
       </ul>
       <span style="color: rgb(250, 197, 28)">Цели/Задачи</span> - выполнить протокол, даже ценой своего существования.<br>
@@ -2726,7 +2726,7 @@
       <span style="color: rgb(26, 188, 156)"><b>TAGILLA</b></span><br>
       Во время эксперимента испытуемый совершил побег из комплекса и скрылся в лесу. Эксперименты оставили свой след, вызвав невыносимую боль и невероятный прилив сил. Охваченный ненавистью к своим мучителям, он встал перед выбором: одинокий путь мести или присоединение к Сопротивлению. Независимо от решения, он стал грозной угрозой комплексу, вселяя ужас в своих врагов безграничной ненавистью и презрением к смерти.<br>
       <span style="color: rgb(65, 168, 95)">Пометка РП-Мастера</span>: На него не распространяется правило 1.1 FearRP. Имеет возможность ломать пропы игроков (<span style="color: rgb(250, 197, 28)">Подробнее в "<span style="color: rgb(0, 0, 255)">6. Специфические РП моменты</span>"</span>).<br>
-      Изначально является одиночкой, но может выбрать иной путь и присоединиться к СОП, отписав "<span style="color: rgb(250, 197, 28)">/ad [RP] TAGILLA примкнул к СОП</span>".<br>
+      Изначально является одиночкой, но может выбрать иной путь и присоединиться к СОП, отписав "<span style="color: rgb(250, 197, 28)">/ad [RP] TAGILLA примкнул к СОП</span>". Не может выбирать варианты будущего для сбежавших из комплекса испытуемых (<span style="color: rgb(65, 168, 95)">Исключение</span>: возможность вступить в СОП).<br>
       <ul>
         <strong>РП моменты TAGILLA</strong><br>
         <br>
