исправлены незначительные ошибки

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 <body>
 <button id="themeToggle">🌙 Тёмная тема</button>
 <div class="container">
-  <h1>Правила сервера Unisono <br> (Актуально на момент 23.09.2025) </h1>
+  <h1>Правила сервера Unisono <br> (Актуально на момент 24.09.2025) </h1>
   <nav>
     <a href="#terms">1. Основные игровые термины и наказания</a>
     <a href="#chat">2. Правила игрового и технического чатов</a>
@@ -2960,7 +2960,7 @@
       <br>
       2. Люцифер Минтон - Моральная Поддержка<br>
       <br>
-      3. Robert Targaryan - Скинул скриншоты йоу/Тестер
+      3. Robert Targaryan - Скинул скриншоты йоу/Тестер<br>
       <br>
       4. Чучмек Артем - этот курва бобер по кд нажимал ctrl + A и delete.
     </p>
